--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://jolennon77.github.io/mysite/",
+  "homepage": "https://jolennon77.github.io/",
   "eslintConfig": {
     "extends": [
       "react-app",
